--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "material-design-icons": "^3.0.1",
     "next": "11.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "7.29.0",
