--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "classnames": "^2.3.1",
     "material-design-icons": "^3.0.1",
     "next": "11.0.0",
     "react": "17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0"
   },
